<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <net.csdn.roundview.RoundTextView
        android:id="@+id/tv_take_photo"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/white"
        android:gravity="center"
        android:paddingVertical="@dimen/_6sdp"
        android:text="@string/string_take_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rTopRadius="@dimen/_5sdp" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#EEEEEE"
        app:layout_constraintTop_toBottomOf="@+id/tv_take_photo" />

    <TextView
        android:id="@+id/tv_choose_photo"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/white"
        android:gravity="center"
        android:paddingVertical="@dimen/_6sdp"
        android:text="@string/string_choose_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#EEEEEE"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_photo" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/white"
        android:gravity="center"
        android:paddingVertical="@dimen/_6sdp"
        android:text="@string/string_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>